[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/weapons/frisbee/frisbee.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture2D" id=2]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
rough = true
bounce = 0.5

[sub_resource type="SphereShape3D" id=3]
radius = 0.3

[sub_resource type="CylinderShape3D" id=5]
height = 0.1
radius = 0.5

[sub_resource type="StandardMaterial3D" id=2]
albedo_color = Color( 1, 0, 1, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="SphereShape3D" id=4]
radius = 0.5

[node name="Frisbee" type="RigidBody3D"]
collision_layer = 4
collision_mask = 37
mass = 0.5
physics_material_override = SubResource( 6 )
gravity_scale = 0.5
continuous_cd = true
max_contacts_reported = 3
contact_monitor = true
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_damp = 1.0
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource( 3 )

[node name="RayCast3D" type="RayCast3D" parent="Collider"]
enabled = true
target_position = Vector3( 0, -2, 0 )

[node name="InactiveCollider" type="CollisionShape3D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="Model" type="CSGCylinder3D" parent="."]
radius = 0.5
height = 0.1
sides = 16
material = SubResource( 2 )

[node name="Damage" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 24

[node name="Collider" type="CollisionShape3D" parent="Damage"]
shape = SubResource( 4 )

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Turn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Damage" to="." method="_on_damage_area_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_self_destruct_timeout"]
[connection signal="timeout" from="Turn" to="." method="_on_turn_timeout"]
